--- a/index.html
+++ b/index.html
@@ -34,12 +34,25 @@
             margin-top: 20px;
             font-size: 16px;
         }
+        .profile {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .profile img {
+            width: 200px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
     </style>
 </head>
 <body>
     <header>
         Zhang Kun Jie 的個人網站
     </header>
+    <section class="profile">
+        <img src="zhang_kun_jie_photo.jpeg" alt="Zhang Kun Jie Photo">
+    </section>
     <section>
         <h2>學歷</h2>
         <p>國立臺灣大學 歷史學學士</p>
